# cycle-tracker

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: ci-pipeline.yml  main.yml
.harness/: build_and_deploy.yaml
backend/: .flaskenv  .pre-commit-config.yaml  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  extensions.py
backend/app/controllers/: __init__.py  auth_controller.py  period_controller.py  report_controller.py  users_controller.py
backend/app/models/: __init__.py  base.py  period.py  user.py
backend/app/schemas/: __init__.py  auth.py  period.py  report.py  user.py
backend/app/services/: __init__.py  auth_service.py  period_service.py  report_service.py  user_service.py
backend/app/utils/: decorators.py  exceptions.py
backend/migrations/versions/: 376d034c3243_initial_database_schema.py
backend/tests/: conftest.py  test_auth_controller.py  test_period_controller.py  test_report_controller.py  test_users_controller.py
cycle-tracker/: Chart.yaml  values.yaml
cycle-tracker/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
cycle-tracker/templates/tests/: test-connection.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.ts
frontend/src/api/: auth.ts  index.ts  periods.ts  reports.ts  users.ts
frontend/src/components/: ConfirmationModal.vue  CycleProgressBar.vue  FertileWindowCard.vue  Footer.vue  LanguagePicker.vue  Navbar.vue  Navigation.vue  (+5 more)
(+15 files in other folders)
